--- a/helium-selenium-integraciones/pom.xml
+++ b/helium-selenium-integraciones/pom.xml
@@ -58,6 +58,18 @@
 			</exclusions>
 		</dependency>
 		<dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <artifactId>hibernate-annotations</artifactId>
+            <groupId>org.hibernate</groupId>
+             <version>3.5.6-Final</version>
+            <scope>provided</scope>
+        </dependency>
+		<dependency>
 			<groupId>es.caib</groupId>
 			<artifactId>sistra-wsdl</artifactId>
 			<version>1.1.0</version>
