--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -79,7 +79,19 @@
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
-	</dependencies>
+		<dependency>
+            <groupId>javax.persistence</groupId>
+            <artifactId>persistence-api</artifactId>
+            <version>1.0</version>
+            <scope>provided</scope>
+        </dependency>
+        <dependency>
+            <artifactId>hibernate-annotations</artifactId>
+            <groupId>org.hibernate</groupId>
+             <version>3.5.6-Final</version>
+            <scope>provided</scope>
+        </dependency>
+   	</dependencies>
 	<profiles>
 		<profile>
 			<id>jboss</id>
