--- a/pom.xml
+++ b/pom.xml
@@ -18,6 +18,7 @@
 		<hibernate.version>3.6.5.Final</hibernate.version>
 		<hibernate.validator.version>4.1.0.Final</hibernate.validator.version>
 		<jbpm.version>3.3.1.GA</jbpm.version>
+		<metrics.version>3.1.2</metrics.version>
 		<cxf.version>2.2.10</cxf.version>
 		<lucene.version>2.9.4</lucene.version>
 		<slf4j.version>1.5.8</slf4j.version>
