--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -12,6 +12,11 @@
 	</properties>
 	<dependencies>
 		<dependency>
+			<groupId>commons-lang</groupId>
+			<artifactId>commons-lang</artifactId>
+			<version>${commons-lang.version}</version>
+		</dependency>
+		<dependency>
 			<groupId>org.jbpm.jbpm3</groupId>
 			<artifactId>jbpm-jpdl</artifactId>
 			<version>3.3.1.GA</version>
@@ -57,7 +62,7 @@
 					</excludes>
 				</configuration>
 			</plugin>
-			<!--  -->
+			<!-- -->
 		</plugins>
 	</build>
 </project>
