821: Manteniment de tipus d'expedient (Manteniment de Enumerats)
Task-Url: http://github.com/GovernIB/helium/issues/issue/821

--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -328,6 +328,16 @@
 			<artifactId>jsrender</artifactId>
 			<version>1.0.0-rc.70</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-core</artifactId>
+		    <version>2.7.5</version>
+		</dependency>
+		<dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		    <version>2.7.5</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
