872: SISALUT no pot accedir a l'expedient amb el processIsntanceId
Task-Url: http://github.com/GovernIB/helium/issues/issue/872

--- a/helium-disseny/pom.xml
+++ b/helium-disseny/pom.xml
@@ -58,7 +58,7 @@
 				<artifactId>maven-jar-plugin</artifactId>
 				<configuration>
 					<excludes>
-						<exclude>**/*Handler.*</exclude>
+						<exclude>**/handlers/*Handler.*</exclude>
 					</excludes>
 				</configuration>
 			</plugin>
