#918: Integració amb el plugin de passarel·la de firma
http://github.com/GovernIB/helium/issues/918

--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -328,6 +328,31 @@
 			<artifactId>jsrender</artifactId>
 			<version>1.0.0-rc.70</version>
 		</dependency>
+		<dependency>
+			<groupId>org.fundaciobit.plugins</groupId>
+			<artifactId>plugins-api</artifactId>
+			<version>1.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fundaciobit.plugins</groupId>
+			<artifactId>plugin-signatureweb-api</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fundaciobit.plugins</groupId>
+			<artifactId>plugin-signatureweb-portafib</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fundaciobit.plugins</groupId>
+			<artifactId>plugin-signatureweb-miniappletinclient</artifactId>
+			<version>2.0.0</version>
+		</dependency>
+		<dependency>
+			<groupId>org.fundaciobit.plugins</groupId>
+			<artifactId>plugin-signatureweb-miniappletinserver</artifactId>
+			<version>2.0.0</version>
+		</dependency>
 	</dependencies>
 	<profiles>
 		<profile>
@@ -607,4 +632,11 @@
 		</plugins>
 		<finalName>helium</finalName>
 	</build>
+	<repositories>
+		<repository>
+			<id>github-governib-maven-repos</id>
+			<name>GitHub GovernIB Maven Repository</name>
+			<url>http://GovernIB.github.io/maven/maven/</url>
+		</repository>
+	</repositories>
 </project>
