#931: Proves funcionas i correcció d'errors
Task-Url: https://github.com/GovernIB/helium/issues/issues/931

Correccions d'errors:
- Null pointer dades expedient quan no hi ha cap dada
- Falta la propietat app.notificacions.comprovar.estat
- Quan es prem sobre una línia del grid ordenable reordena tot i no
intercanviar posició
- Els valors de la enumeració del tipus d'expedient no es troben al grid
com en els altres llistats
- Opcions duplicades menú disseny que apuntaven a la nova i antiga
versió. Es deixen els enllaços cap a la nova versió i un enllaç a la
antiga
- Error carregant les variables de definicions de procés per consultes
- No es troben els documents de la definició de procés per a la
signatura
- No es copien les dades de la darrera versió de la definició de procés
cap a la nova quan es crea una nova versió d'un desplegament .par.
- El tooltip no desapareix
- Quan es desplega un PAR no es relaciona amb el tipus d'expedient
escollit
- Falta avisar en el disseny de la definició de procés si el tipus
d'expedient relacionat està configurat per utilitzar informació pròpia.
- Botó per esborrar valor de variable múltiple quan les dades ja han
estat validades

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -325,3 +325,7 @@ app.gis.plugin.actiu=true
 app.gis.plugin.class=net.conselldemallorca.helium.integracio.plugins.gis.GisPluginSitibsa
 app.gis.plugin.sitibsa.url.visor=http://195.57.62.51:8080/visualitzador/prova.jsp
 
+# ################################
+# Comporovar estat notitifacions #
+# ################################
+app.notificacions.comprovar.estat=60000
