#923: Simplificació dels accessos a la llibreria de workflow
Task-Url: https://github.com/GovernIB/helium/issues/issues/923

Guardo els canvis on s'ha independitzat fins a la helium-core, falta la
helium-core-common

--- a/helium-core-v26/pom.xml
+++ b/helium-core-v26/pom.xml
@@ -295,6 +295,11 @@
 			<artifactId>helium-core-common</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>net.conselldemallorca</groupId>
+			<artifactId>helium-jbpm3</artifactId>
+			<version>${helium.version}</version>
+		</dependency>
 	</dependencies>
 	<repositories>
 		<repository>
