#937: Notificacions amb SICER
Task-Url: https://github.com/GovernIB/helium/issues/issue/937

--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -333,6 +333,11 @@
 			<artifactId>helium-plugin-api</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
+		<dependency>
+		    <groupId>com.jcraft</groupId>
+		    <artifactId>jsch</artifactId>
+		    <version>0.1.54</version>
+		</dependency>
 	</dependencies>
 	<build>
 		<plugins>
