--- a/helium-selenium/src/test/resources/test.properties
+++ b/helium-selenium/src/test/resources/test.properties
@@ -6,7 +6,7 @@
 # entorn= o entorn=pre per a l'entorn de pre producció o test,
 # entorn=dev per desenvolupament
 # entorn=pre per pre producció o test
-entorn=pre
+entorn=dev
 
 # Selecció del browser
 test.browser=firefox
