#932: Proves amb Selenium
Task-Url: https://github.com/GovernIB/helium/issues/932

Guardo una correció pels tests.

--- a/helium-selenium/src/test/resources/test-pre.properties
+++ b/helium-selenium/src/test/resources/test-pre.properties
@@ -42,9 +42,9 @@ app.forms.embedded.port=9080
 ####
 # WS per tramitació externa
 ####
-app.tramitacio.url=http://proves.caib.es/helium/ws/TramitacioService
+app.tramitacio.url=https://proves.caib.es/helium/ws/TramitacioService
 
 ####
 # Portasignatures
 ####
-app.portasignatures.plugin.url.callback=http://proves.caib.es/helium/services/MCGDWS
+app.portasignatures.plugin.url.callback=https://proves.caib.es/helium/services/MCGDWS
