#932: Proves amb Selenium
Task-Url: https://github.com/GovernIB/helium/issues/932

--- a/helium-selenium/src/test/resources/test-pre.properties
+++ b/helium-selenium/src/test/resources/test-pre.properties
@@ -20,7 +20,7 @@ test.usuari.password=limit5678
 test.base.url=https://e43110511r:limit5678@proves.caib.es/helium/v3
 
 # Tipus d'expedient per a les proves
-test.tipus.expedient.codi=test
+test.tipus.expedient.codi=test2
 test.tipus.expedient.titol=Test de funcionalitats
 
 # Definició de procés de proves
@@ -29,13 +29,13 @@ test.definicio.proces.codi=test
 ####
 # Integració amb formularis externs
 ####
-app.forms.service.url=http://localhost:9080/helium-selenium-webapp/ws/IniciFormulari
+app.forms.service.url=http://10.215.2.54:9080/helium-selenium-webapp/ws/IniciFormulari
 # Si es comenten els dos paràmetres següents l'accés al webservice es farà sense autenticació
 #app.forms.service.username=user
 #app.forms.service.password=pass
 # Indica si la aplicació que respon als formularis externs s'ha de iniciar en el JUnit o ja está funcionant
 app.forms.embedded=true
-app.forms.embedded.dir=C:\\Users\\danielm\\AppData\\Local\\Temp
+app.forms.embedded.dir=C:\\Temp
 app.forms.embedded.applicationid=helium-selenium-webapp
 app.forms.embedded.port=9080
 
