--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -188,7 +188,7 @@
 			<version>1.4</version>
 			<type>jar</type>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>jaxen</groupId>
 			<artifactId>jaxen</artifactId>
 			<version>1.1.1</version>
@@ -200,7 +200,7 @@
 					<groupId>xom</groupId>
 				</exclusion>
 			</exclusions>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>net.sf.jasperreports</groupId>
 			<artifactId>jasperreports</artifactId>
@@ -247,11 +247,11 @@
 			<artifactId>helium-ws</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
-		<dependency>
+		<!--dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-selenium-integraciones</artifactId>
 			<version>${helium.version}</version>
-		</dependency>
+		</dependency-->
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
 			<artifactId>helium-plugin-api</artifactId>
