#1014: Error amb la ordenació dels valors de les enumeracions
Task-Url: https://github.com/GovernIB/helium/issues/1014

--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -112,7 +112,7 @@
 	<!-- login-config.begin -->
 	<login-config>
 		<auth-method>BASIC</auth-method>
-		<realm-name>Ajuntament d'Inca</realm-name>
+		<realm-name>@@web.realm.name@@</realm-name>
 	</login-config>
 	<!-- login-config.end -->
 
