#932: Proves amb Selenium
Task-Url: https://github.com/GovernIB/helium/issues/932

Signatura amb l'applet del portafib

--- a/helium-selenium/src/test/resources/test-pre.properties
+++ b/helium-selenium/src/test/resources/test-pre.properties
@@ -48,3 +48,4 @@ app.tramitacio.url=https://proves.caib.es/helium/ws/TramitacioService
 # Portasignatures
 ####
 app.portasignatures.plugin.url.callback=https://proves.caib.es/helium/services/MCGDWS
+app.portasignatures.web.url=https://e43110511r:limit5678@proves.caib.es/portafib
