--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -136,6 +136,12 @@
 		   <version>2.0.4</version>
 		</dependency>
 		
+		<!-- Per poder prèmer elements de la finestra dins de applets -->
+		<dependency>
+	      	<groupId>com.sikulix</groupId>
+    	  	<artifactId>sikulixapi</artifactId>
+      		<version>1.1.0</version>
+    	</dependency>	
 	</dependencies>
 	<build>
 		<plugins>
