--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -74,7 +74,7 @@
 		</dependency>
 		<dependency>
 			<groupId>net.conselldemallorca</groupId>
-			<artifactId>helium-core-v26</artifactId>
+			<artifactId>helium-core</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
