#1073: Error. Hi ha classes que encara escriuen per l'stdout
Task-Url: https://github.com/GovernIB/helium/issues/issues/1073

--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -6,6 +6,9 @@
 	<listener>
 		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
 	</listener>
+	<listener>
+		<listener-class>net.conselldemallorca.helium.webapp.v3.config.InicialitzacioListener</listener-class>
+	</listener>
 	
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
