--- a/helium-webapp/src/main/webapp/WEB-INF/web.xml
+++ b/helium-webapp/src/main/webapp/WEB-INF/web.xml
@@ -53,6 +53,8 @@
 	<filter-mapping>
 		<filter-name>springSecurityFilterChain</filter-name>
 		<url-pattern>/*</url-pattern>
+		<dispatcher>REQUEST</dispatcher>
+		<dispatcher>ERROR</dispatcher>
 	</filter-mapping>
 
 	<filter>
