#1112: Posar filtre certificats com propietat aplicació
Task-Url: https://github.com/GovernIB/helium/issues/1112

--- a/helium-webapp/properties/helium.properties
+++ b/helium-webapp/properties/helium.properties
@@ -228,6 +228,8 @@ app.persones.plugin.sync.periode=3600000
 # Tipus de signatura de documents (caib, afirma)
 app.signatura.tipus=afirma
 app.signatura.token.llarg=true
+# Filtre de certificats aplicat al plugin de signatures (si no existeix= filters.1=nonexpired:) 
+app.signatura.certificats.filtre=filters.1=nonexpired:
 # Classe del plugin per a la signatura digital de documents
 app.signatura.plugin.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginTest
 #app.signatura.plugin.class=net.conselldemallorca.helium.integracio.plugins.signatura.SignaturaPluginAfirma
