--- a/helium-selenium-v26/pom.xml
+++ b/helium-selenium-v26/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.conselldemallorca</groupId>
+		<groupId>net.conselldemallorca.helium</groupId>
 		<artifactId>helium</artifactId>
 		<version>3.2</version>
 	</parent>
@@ -49,21 +49,21 @@
 			<version>1.7.5</version>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-selenium-integraciones</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-ws</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-plugin-impl</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
