--- a/helium-selenium/pom.xml
+++ b/helium-selenium/pom.xml
@@ -4,7 +4,7 @@
 	xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.conselldemallorca</groupId>
+		<groupId>net.conselldemallorca.helium</groupId>
 		<artifactId>helium</artifactId>
 		<version>3.2</version>
 	</parent>
@@ -72,20 +72,20 @@
 		
 		<!-- Helium -->
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-core-common</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-ws</artifactId>
 			<version>${helium.version}</version>
 			<scope>compile</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-plugin-impl</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
