--- a/helium-core-common/pom.xml
+++ b/helium-core-common/pom.xml
@@ -2,7 +2,7 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
-		<groupId>net.conselldemallorca</groupId>
+		<groupId>net.conselldemallorca.helium</groupId>
 		<artifactId>helium</artifactId>
 		<version>3.2</version>
 	</parent>
@@ -305,7 +305,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-jbpm3</artifactId>
 			<version>${helium.version}</version>
 			<exclusions>
@@ -324,12 +324,12 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-core-api</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-plugin-api</artifactId>
 			<version>${helium.version}</version>
 		</dependency>
