--- a/helium-ws/pom.xml
+++ b/helium-ws/pom.xml
@@ -2,8 +2,8 @@
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
 	<parent>
+		<groupId>net.conselldemallorca.helium</groupId>
 		<artifactId>helium</artifactId>
-		<groupId>net.conselldemallorca</groupId>
 		<version>3.2</version>
 	</parent>
 	<artifactId>helium-ws</artifactId>
@@ -79,7 +79,7 @@
 			</exclusions>
 		</dependency>
 		<dependency>
-			<groupId>net.conselldemallorca</groupId>
+			<groupId>${project.groupId}</groupId>
 			<artifactId>helium-core-v26</artifactId>
 			<version>${helium.version}</version>
 			<type>jar</type>
