--- a/helium-webapp/pom.xml
+++ b/helium-webapp/pom.xml
@@ -374,10 +374,14 @@
 		<profile>
 			<id>tomcat</id>
 			<activation>
+				<file>
+					<exists>appserv_tomcat</exists>
+				</file>
 				<activeByDefault>false</activeByDefault>
 			</activation>
 			<properties>
 				<application.context>application-context-tomcat.xml</application.context>
+				<webjars.classpath>classpath:</webjars.classpath>
 			</properties>
 			<dependencies>
 				<dependency>
@@ -396,7 +400,7 @@
 					<artifactId>cglib</artifactId>
 					<version>2.2</version>
 		    	</dependency>
-				<dependency>
+				<!--dependency>
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-entitymanager</artifactId>
 					<version>${hibernate.version}</version>
@@ -407,7 +411,7 @@
 							<groupId>org.slf4j</groupId>
 						</exclusion>
 					</exclusions>
-				</dependency>
+				</dependency-->
 				<dependency>
 					<groupId>org.hibernate</groupId>
 					<artifactId>hibernate-validator</artifactId>
@@ -490,10 +494,14 @@
 		<profile>
 			<id>jboss</id>
 			<activation>
+				<file>
+					<missing>appserv_tomcat</missing>
+				</file>
 				<activeByDefault>true</activeByDefault>
 			</activation>
 			<properties>
 				<application.context>application-context-jboss.xml</application.context>
+				<webjars.classpath></webjars.classpath>
 			</properties>
 			<dependencies>
 				<dependency>
