#1164 Integració amb Notib

--- a/helium-plugin-impl/pom.xml
+++ b/helium-plugin-impl/pom.xml
@@ -234,6 +234,13 @@
 		    <version>1.6.2</version>
 		</dependency>
         
+        <dependency>
+			<groupId>es.caib.notib</groupId>
+			<artifactId>notib-client</artifactId>
+			<version>0.1</version>
+			<scope>compile</scope>
+		</dependency>
+		
 	</dependencies>
 	<build>
 		<plugins>
