--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 		<commons-lang.version>2.6</commons-lang.version>
 		<portafib.version>1.1.0</portafib.version>
 		<slf4j.version>1.5.8</slf4j.version>
+		<jackson.version>2.7.0</jackson.version>
 	</properties>
 	<modules>
 		<module>helium-core-api</module>
